Network_policy/diff-namespace-np/default-nginx-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: nginx-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
